Authenticable inteface + TOTPAuth + TOTPException

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "binhld/totp-laravel",
+    "name": "binhld/laravel2fa",
     "description": "TOTP Authentication Library for Laravel",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "BinhLD\\TOTPLaravel\\": "src/"
+            "BinhLD\\Laravel2FA\\": "src/"
         }
     },
     "authors": [
@@ -13,5 +13,8 @@
             "name": "8991NoFear",
             "email": "binh.ld172971@sis.hust.edu.vn"
         }
-    ]
+    ],
+    "require": {
+        "php": ">=7"
+    }
 }
